Revision history for Perl module TestRail::API

0.040 2017-04-27 TEODESIAN
    - Fix performance issue in TestRail::Utils::Find::FindTests
    - Fix strange testsuite bug caused by regressions in MCE

0.039 2017-03-07 TEODESIAN
    - Fix issue where follow_post_redirect could not be passed to constructor
    - Add getRunResults, getRunResultsPaginated Methods in TestRail::API
    - Cache connections by default for speedups
    - Cache getTests() for getTestByName()
    - Fix warnings when testrail-results encounters 'assigned' results
    - make --cachefile a multi argument in testrail-results
    - add the --perfile argument to testrail-results
    - add the --merged argument to testrail-results
    - Add platform information and guidance on results_by_version to testrail-results

0.038 2017-01-23 TEODESIAN
    - Optimize TestRail::Utils::Find::getResults and testrail-results
    - Add ability to follow POST redirects
    - Don't print stack traces during constructor errors, this can leak auth info into logs
    - Don't override filename in TAP Parser if we already have it
    - Fix issue where non-standard status overrides were not possible
    - Add finder callback to TestRail::Utils::FindTests
    - Add testsuite_id filter to TestRail::API::getChildRunByName
    - Add defect metrics to testrail-results
    - Add version metrics to testrail-results

0.037 2016-08-10 TEODESIAN
    - Fix incorrect POD for TestRail::API::createRunInPlan
    - Add testrail-results binary and TestRail::Utils::Find::getResults.
    - Add TestRail::API::getChildSections, and modify Test::Rail::Parser to recursively search passed sections when spawning runs
    - Change TestRail::API::getSections to cache the sections in a project.
    - Add notices about problems with duplicate entries to POD.
    - Add capability to auto-spawn configurations/groups to App::Prove::Plugin::TestRail and friends when configuration_group is passed

0.036 2016-04-25 TEODESIAN