@@ -132,6 +132,7 @@ stopwords = cachefile
 stopwords = getChildSections
 stopwords = POSTs
 stopwords = perfile
+stopwords = csv
 
 [PkgVersion]
 [AutoPrereqs]
