@@ -3,6 +3,7 @@ Revision history for Perl module TestRail::API
 0.040 2017-04-27 TEODESIAN
     - Fix performance issue in TestRail::Utils::Find::FindTests
     - Fix strange testsuite bug caused by regressions in MCE
+    - Allow filtering in TestRail::API::getPlans
 
 0.039 2017-03-07 TEODESIAN
     - Fix issue where follow_post_redirect could not be passed to constructor
